exclude README.md from site build

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 pygments: true
 permalink: /:year/:month/:day/:title/
 
-exclude: ['_biblio/']
+exclude: ['_biblio/', 'README.md']
 
 ## Metadata 
 title: From the Bottom of the Heap 
