push recent changes to website

--- a/_config.yml
+++ b/_config.yml
@@ -40,3 +40,6 @@ pandoc:
     - csl: '_biblio/freshwater-biology.csl'
     - email-obfuscation: 'references'
     - highlight-style: pygments
+
+## For categories
+category_dir: category
