fiddling with some tests against newer pandoc v2+

--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,14 @@
 ## main jekyll args
 
 pygments: true
+##highlighter: pygments
 permalink: /:year/:month/:day/:title/
 
-exclude: ['_biblio/', 'README.md']
+exclude:
+  - '_biblio/'
+  - 'README.md'
+  - '*.Rmd'
+  - 'knitr-cache/'
 
 ## Metadata 
 title: From the Bottom of the Heap 
@@ -28,6 +33,10 @@ url: http://www.fromthebottomoftheheap.net
 #url: http://localhost/
 
 analytics: UA-7900310-7
+
+## gems to use
+##gems:
+##  - jekyll-pandoc
 
 ## Use pandoc for md
 markdown: pandoc
