--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ exclude:
   - 'README.md'
   - '*.Rmd'
   - 'knitr-cache/'
-  - '*.csv'
+  - '_drafts/csv/*.csv'
 
 ## Metadata 
 title: From the Bottom of the Heap 
