Updates to allow the blog to build on Fedora 22 and with the pandoc it provides, plus newer versions of Jekyll:
 * Fix pandoc_markdown.rb to use highlighter_prefix
 * Fix pandoc_markdown.rb to call Jekyll::Errors::FatalException as
   FatalException has moved to the Jekyll::Errors module
 * Fix _config.yml to use highlighter tag
 * Comment out CSL in _config.yml due to a bug in pandoc-citeproc
   which throws errors if you use anything other than the default
   CSL file

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 ## main jekyll args
 
-pygments: true
-##highlighter: pygments
+##pygments: true
+highlighter: pygments
 permalink: /:year/:month/:day/:title/
 
 exclude:
@@ -47,7 +47,7 @@ pandoc:
     - smart
     - mathjax
     - bibliography: '_biblio/blog-biblio.bib'
-    - csl: '_biblio/freshwater-biology.csl'
+##    - csl: '_biblio/freshwater-biology.csl'
     - email-obfuscation: 'references'
     - highlight-style: pygments
 
