several new posts; new CSL, which finally works with the version of pandoc installed in a Fedora install

--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,10 @@ exclude:
   - 'knitr-cache/'
   - '_drafts/csv/*.csv'
 
+keep_files: [
+  '.well-known/acme-challenge'
+]
+
 ## Metadata 
 title: From the Bottom of the Heap 
 tagline: the musings of a geographer
@@ -48,6 +52,7 @@ pandoc:
     - mathjax
     - bibliography: '_biblio/blog-biblio.bib'
 ##    - csl: '_biblio/freshwater-biology.csl'
+    - csl: '_biblio/frontiers.csl'
     - email-obfuscation: 'references'
     - highlight-style: pygments
 
