add some changed files

--- a/_config.yml
+++ b/_config.yml
@@ -10,10 +10,8 @@ exclude:
   - '*.Rmd'
   - 'knitr-cache/'
   - '_drafts/csv/*.csv'
-
-keep_files: [
-  '.well-known/acme-challenge'
-]
+  - '_drafts/*.R'
+  - '_drafts/*.csv'
 
 ## Metadata 
 title: From the Bottom of the Heap 
@@ -34,8 +32,7 @@ timezone: America/Regina
 # these are available to liquid filters with: site.author.givenName, etc
 
 ## Functional configuration 
-url: http://www.fromthebottomoftheheap.net
-#url: http://localhost/
+url: https://www.fromthebottomoftheheap.net
 
 analytics: UA-7900310-7
 
@@ -48,7 +45,7 @@ markdown: pandoc
 pandoc:
   format: html5
   extensions:
-    - smart
+##    - smart
     - mathjax
     - bibliography: '_biblio/blog-biblio.bib'
 ##    - csl: '_biblio/freshwater-biology.csl'
